# bbac_ics

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  bbac_main_node  experiment_evaluator_node  package.xml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
bbac/nodes/: bbac_main_node.py
bbac_ics_core/: __init__.py
bbac_ics_core/experiments/: __init__.py  ablation_study.py  adaptive_eval.py  dynamic_rules_test.py  metrics_calculator.py
bbac_ics_core/layers/: __init__.py  authentication.py  baseline_manager.py  decision_maker.py  feature_extractor.py  fusion_layer.py  ingestion.py  learning_updater.py  policy_engine.py
bbac_ics_core/models/: __init__.py  ensemble_predictor.py  isolation_forest_detector.py  lstm_predictor.py  markov_chain.py  sequence_predictor.py  statistical_detector.py
bbac_ics_core/nodes/: baseline_manager_node.py  bbac_main_node.py  evaluator_node.py  experiment_evaluator_node.py
bbac_ics_core/utils/: __init__.py  config_loader.py  config_loader_new.py  data_loader.py  data_loader_new.py  data_structures.py  data_utils.py  generate_plots.py  logger.py  request_mapper.py
config/: params.yaml
launch/: experiment.launch.py  system.launch.py
msg/: AccessRequest.msg  EmergencyAlert.msg  LayerOutput.msg
msgs/: AccessRequest.msg  EmergencyAlert.msg
scripts/: enrich_dataset.py  generate_data  generate_dataset.py  publish_dataset.py  run_experiments.py  validate_system.py
