<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bbac_ics</name>
  <version>1.0.0</version>
  <description>
    BBAC ICS Framework - Behavioral-Based Access Control for Industrial Control Systems.
    
    Hybrid access control system combining rule-based policies, behavioral analysis,
    and machine learning for adaptive security in ICS environments.
    
    Compatible with ROS2 Humble and Python 3.10 only.
  </description>
  
  <maintainer email="alnsilva@uesc.be">Alexandre do Nascimento Silva</maintainer>
  <license>APACHE 2.0</license>
  
  <url type="website">https://github.com/yourusername/bbac_ics</url>
  <url type="repository">https://github.com/yourusername/bbac_ics</url>
  <url type="bugtracker">https://github.com/yourusername/bbac_ics/issues</url>
  
  <author email="your.email@example.com">Your Name</author>
  
  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Build dependencies --> 
  <build_depend>rosidl_default_generators</build_depend> 
  <build_depend>ament_cmake_python</build_depend>

  <!-- Execution dependencies --> 
  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend> 
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend> 
  
  <!-- Python libs --> 
  <exec_depend>python3-numpy</exec_depend> 
  <exec_depend>python3-scipy</exec_depend> 
  <exec_depend>python3-pandas</exec_depend> 
  <exec_depend>python3-yaml</exec_depend> 
  <exec_depend>python3-sklearn</exec_depend> 
  <exec_depend>python3-matplotlib</exec_depend> 
  <exec_depend>python3-seaborn</exec_depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
